Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,14 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    number = len(travel_destinations)\n",
-    "    return number"
+    "    return len(travel_destinations)"
    ]
   },
   {
@@ -96,7 +95,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    "
+    "    return "
    ]
   },
   {
