Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,6 +223,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    capital = []\n",
+    "    travel_de.append()\n",
     "    return travel_destinations.title()"
    ]
   },
