--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capital = []\n",
-    "    travel_de.append()\n",
+    "    capital.append(travel_destinations.title())\n",
     "    return travel_destinations.title()"
    ]
   },
