--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,9 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capital = []\n",
-    "    for \n",
-    "    capital.append(travel_destinations.title())\n",
+    "    for destinations in travel_destinations:\n",
+    "        capital.append(travel_destinations.title())\n",
+    "    \n",
     "    return travel_destinations.title()"
    ]
   },
